--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,19 @@
   font-family: sans-serif;
 }
 
-body {
-  width: 100%;
+/***mixins**/
+.body {
   height: 100vh;
+  width: 100%;
 }
 
-.border {
+/****extends*/
+.border, .border-green {
   border: solid 1px black;
+}
+
+.border-green {
+  border: solid 1px green;
 }
 
 .container {
@@ -20,6 +26,12 @@ body {
   grid-template-columns: 1.1fr 1.1fr;
   grid-template-rows: 0.5fr auto 0.5fr;
   grid-template-areas: "cabeza cabeza" "cuerpo cuerpo" "pie pie";
+}
+
+.abajo {
+  margin-top: auto;
+  width: 100%;
+  padding: 1em 0;
 }
 
 @media screen and (max-width: 461px) {
@@ -82,6 +94,10 @@ body {
   text-shadow: 2px 2px 2px black;
 }
 
+.bg-pink {
+  background-color: rgb(220, 84, 107);
+}
+
 .main {
   grid-area: cuerpo;
 }
@@ -125,7 +141,7 @@ body {
   background-color: rgb(243, 241, 241);
   box-shadow: 2px 2px 2px rgba(0, 1, 0, 0.798);
   border-radius: 15px;
-  margin: 10px;
+  margin: 15px;
   width: 305px;
   height: 400px;
   border: 2px solid black;
@@ -146,6 +162,86 @@ body {
   text-align: center;
   margin: 5px;
   font-size: 20px;
+}
+
+/*contacto*/
+.PaginaContacto {
+  background-color: rgb(26, 22, 22);
+  color: white;
+  font-family: "Charis SIL", serif;
+  font-family: "Rubik", sans-serif;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.PaginaContacto .ContenedorForm {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5em;
+}
+.PaginaContacto .ContenedorForm h1 {
+  text-align: center;
+  font-size: 3em;
+}
+.PaginaContacto .ContenedorWrap {
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.932);
+}
+.PaginaContacto .ContenedorWrap .ContenedorWrap > * {
+  padding: 1em;
+}
+
+.ContactoForm {
+  background-color: rgba(24, 23, 23, 0.911);
+}
+
+.ContactoForm form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.ContactoForm form .block {
+  grid-column: 1/3;
+}
+
+.ContactoForm form p {
+  margin: 0;
+  padding: 1em;
+}
+
+.ContactoForm form button,
+.ContactoForm form input,
+.ContactoForm form textarea {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  outline: 0;
+  color: white;
+  border-bottom: 1px solid red;
+}
+
+.ContactoForm form button {
+  background-color: rgba(250, 20, 20, 0.856);
+  border: 0;
+  color: black;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+.ContactoForm form button:hover,
+.ContactoForm form button:focus {
+  background: rgb(247, 107, 42);
+  color: white;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+
+.cuerposervicios {
+  background-color: rgb(76, 76, 125);
+  width: 100%;
+  height: 100vh;
 }
 
 .footer {
