--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,4 +1,5 @@
 @import "../base/variables";
+
 .main {
     grid-area: cuerpo;
 }
@@ -7,6 +8,7 @@
     grid-column-start: 1;
     grid-column-end: -1;
 }
+
 .hero {
     color: $color-principal;
     display: flex;
@@ -26,39 +28,142 @@
 .titulo h2 {
     font-size: 60px;
 }
+
 .texto {
     text-align: center;
     margin: 5px;
 }
-.servicios  {
+
+.servicios {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
+
     .card {
         background-color: rgb(243, 241, 241);
         box-shadow: 2px 2px 2px rgba(0, 1, 0, 0.798);
         border-radius: 15px;
-        margin: 10px;
+        margin: 15px;
         width: 305px;
         height: 400px;
         border: 2px solid black;
         overflow: hidden;
         text-align: center;
         transition: all 0.25s;
+
         &:hover {
             transform: translateY(-15px);
             box-shadow: 0 12px 16px rgba(0, 0, 0, 0.736);
         }
     }
-    div img {
-        width: 300px;
-        height: 300px;
-        border-radius: 15px 15px 0 0;
+
+    div {
+        img {
+            width: 300px;
+            height: 300px;
+            border-radius: 15px 15px 0 0;
+
         }
-        div p {
+
+        p {
             text-align: center;
             margin: 5px;
             font-size: 20px;
         }
     }
+}
+
+    /*contacto*/
+    .PaginaContacto {
+        background-color: rgb(26, 22, 22);
+        color: white;
+        font-family: 'Charis SIL', serif;
+        font-family: 'Rubik', sans-serif;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+
+        .ContenedorForm {
+            max-width: 1170px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 1.5em;
+
+            h1 {
+                text-align: center;
+                font-size: 3em;
+
+            }
+        }
+
+        .ContenedorWrap {
+            box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.932);
+
+            .ContenedorWrap>* {
+                padding: 1em;
+            }
+        }
+    }
+
+
+
+
+
+
+
+
+
+
+    .ContactoForm {
+        background-color: rgba(24, 23, 23, 0.911);
+    }
+
+    .ContactoForm form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .ContactoForm form .block {
+        grid-column: 1 / 3;
+    }
+
+    .ContactoForm form p {
+        margin: 0;
+        padding: 1em;
+    }
+
+    .ContactoForm form button,
+    .ContactoForm form input,
+    .ContactoForm form textarea {
+        width: 100%;
+        padding: .7em;
+        border: none;
+        background: none;
+        outline: 0;
+        color: white;
+        border-bottom: 1px solid red;
+
+    }
+
+    .ContactoForm form button {
+        background-color: rgba(250, 20, 20, 0.856);
+        border: 0;
+        color: black;
+        text-transform: uppercase;
+        padding: 1em;
+    }
+
+    .ContactoForm form button:hover,
+    .ContactoForm form button:focus {
+        background: rgb(247, 107, 42);
+        color: white;
+        transition: background-color 1s ease-out;
+        outline: 0;
+    }
+.cuerposervicios{
+    background-color: rgb(76, 76, 125);
+    width: 100%;
+    height: 100vh;
+}
